# MediaPlayer

./: settings.gradle
app/: build.gradle
app/src/main/java/com/hola/media/player/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
lib_player/: build.gradle
lib_player/src/main/: AndroidManifest.xml
lib_player/src/main/cpp/: CMakeLists.txt  audio_core.cpp  audio_core.h  consts.h  frame_core.cpp  frame_core.h  jni_player_call.cpp  jni_player_call.h  media_core.cpp  media_core.h  media_player.cpp  media_player.h  native-lib.cpp  packet_queue.cpp  packet_queue.h  play_status.cpp  play_status.h
lib_player/src/main/java/com/hola/media/player/: MusicPlayer.kt
